@@ -37,5 +37,10 @@
 			<DistName>Ubuntu</DistName>
 			<DistVersion>12.04</DistVersion>
 		</OS>
+		<OS>
+			<Name>Ubuntu 14.04 LTS</Name>
+			<DistName>Ubuntu</DistName>
+			<DistVersion>14.04</DistVersion>
+		</OS>
 	</Dist>
 </EasySCP_OS>
