@@ -1,76 +1,0 @@
-<Directory {PATH}/backups>
- <Limit RMD RNFR RNTO DELE XRMD>
-  DenyAll
- </Limit>
-</Directory>
-<Directory {PATH}/backups/*>
- <Limit RMD RNFR RNTO DELE XRMD>
-    AllowAll
- </Limit>
-</Directory>
-
-<Directory {PATH}/cgi-bin>
- <Limit RMD RNFR RNTO DELE XRMD>
-  DenyAll
- </Limit>
-</Directory>
-<Directory {PATH}/cgi-bin/*>
- <Limit RMD RNFR RNTO DELE XRMD>
-    AllowAll
- </Limit>
-</Directory>
-
-<Directory {PATH}/errors>
- <Limit RMD RNFR RNTO DELE XRMD>
-  DenyAll
- </Limit>
-</Directory>
-<Directory {PATH}/errors/*>
- <Limit RMD RNFR RNTO DELE XRMD>
-    AllowAll
- </Limit>
-</Directory>
-
-<Directory {PATH}/htdocs>
- <Limit RMD RNFR RNTO DELE XRMD>
-  DenyAll
- </Limit>
-</Directory>
-<Directory {PATH}/htdocs/*>
- <Limit RMD RNFR RNTO DELE XRMD>
-    AllowAll
- </Limit>
-</Directory>
-
-<Directory {PATH}/logs>
- <Limit RMD RNFR RNTO DELE XRMD>
-  DenyAll
- </Limit>
-</Directory>
-<Directory {PATH}/logs/*>
- <Limit RMD RNFR RNTO DELE XRMD>
-    AllowAll
- </Limit>
-</Directory>
-
-<Directory {PATH}/phptmp>
- <Limit RMD RNFR RNTO DELE XRMD>
-  DenyAll
- </Limit>
-</Directory>
-<Directory {PATH}/phptmp/*>
- <Limit RMD RNFR RNTO DELE XRMD>
-    AllowAll
- </Limit>
-</Directory>
-
-<Directory {PATH}/statistics>
- <Limit RMD RNFR RNTO DELE XRMD>
-  DenyAll
- </Limit>
-</Directory>
-<Directory {PATH}/statistics/*>
- <Limit RMD RNFR RNTO DELE XRMD>
-    AllowAll
- </Limit>
-</Directory>
