@@ -1,0 +1,78 @@
+apache2-mpm-worker
+apache2
+apache2-suexec
+apache2-utils
+awstats
+bash
+bzip2
+chkrootkit
+dnsutils
+dovecot-common
+dovecot-imapd
+dovecot-mysql
+dovecot-pop3d
+dovecot-sieve
+gamin
+gzip
+iptables
+iptables-persistent
+language-pack-bg
+language-pack-ca
+language-pack-cs
+language-pack-da
+language-pack-de
+language-pack-el
+language-pack-en
+language-pack-es
+language-pack-eu
+language-pack-fi
+language-pack-fr
+language-pack-gl
+language-pack-hu
+language-pack-it
+language-pack-ja
+language-pack-nl
+language-pack-pl
+language-pack-pt
+language-pack-ro
+language-pack-ru
+language-pack-sk
+language-pack-sv
+language-pack-tr
+language-pack-zh-hans
+language-pack-zh-hant
+libapache2-mod-fcgid
+libmcrypt4
+libsasl2-2
+libsasl2-modules
+locales
+lsb-release
+lzma
+make
+mc
+mysql-client
+mysql-server
+pdns-server
+pdns-backend-mysql
+php-pear
+php5
+php5-adodb
+php5-cgi
+php5-cli
+php5-curl
+php5-gd
+php5-idn
+php5-mcrypt
+php5-mysql
+policyd-weight
+postfix
+postfix-mysql
+postgrey
+procmail
+proftpd-basic
+proftpd-mod-mysql
+rkhunter
+sasl2-bin
+ssh
+tar
+wget
